syntax = "proto3";

package pb;

option go_package="github.com/BBitQNull/SSHoneyNet/pb/cmdparser/pb";

service CmdParser {
    rpc CommandParser (CmdParserRequest) returns (CmdParserResponse) {}
}

message CmdParserRequest {
    string cmd = 1;
}

message CmdParserResponse {
    Script ast = 1;
}

message Script {
    repeated CommandLine lines = 1;
}

message CommandLine {
    repeated Command pipeline = 1;
    optional Redirection redir = 2;
}

message Command {
    string name = 1;
    repeated FlagWithValue flags = 2;
    repeated Argument args = 3;
}

message FlagWithValue {
    string name = 1;
    optional string value = 2;
}

message Argument {
    optional string value = 1;
}

message Redirection {
    string file = 1;
}